tests/run-make/crate-loading-multiple-candidates/multiple-candidates.rs
extern crate crateresolve1;

fn main() {}
